# portais-noticias-tech

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
analises/: analises.ipynb
docs/: analise-dos-dados.md  fluxo-desenvolvimento.md  pontos-de-melhorias.md
docs/imgs/: docker-stats  docker-stats-2
portais_tech/: runspiders.py  scrapy.cfg
portais_tech/portais_tech/: items.py  middlewares.py  pipelines.py  settings.py
portais_tech/portais_tech/spiders/: olhardigital_spider.py
portais_tech/portais_tech/spiders/olhardigital/: __init__.py  spider.py
portais_tech/portais_tech/spiders/tecmundo/: __init__.py  spider.py
